organise the code

--- a/notebooks/prediction /apply-model.ipynb
+++ b/notebooks/prediction /apply-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,43 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/owenwong/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to /Users/owenwong/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     /Users/owenwong/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nltk.download('stopwords')\n",
-    "nltk.download('punkt') \n",
-    "nltk.download('wordnet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -220,424 +184,16 @@
        "[608 rows x 6 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train = pd.read_csv('../../data/processed/train.csv')\n",
-    "test = pd.read_csv('../../data/processed/test.csv')\n",
+    "train = pd.read_csv('../../data/processed/train_esg_shortened.csv')\n",
+    "test = pd.read_csv('../../data/processed/test_esg_shortened.csv')\n",
     "\n",
     "train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "962"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train['transcript_esg'][1].split(\" \"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stop_words = set(stopwords.words('english'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_to_lowercase(msg):\n",
-    "    '''\n",
-    "    aim: change all words to lower case\n",
-    "    '''\n",
-    "    return msg.lower()\n",
-    "\n",
-    "\n",
-    "def remove_punctuation(msg):\n",
-    "    '''\n",
-    "    aim: remove all the punctuation from the tweet given\n",
-    "    Punctuations are characters other than alphaters and digits.\n",
-    "    '''\n",
-    "    return msg.translate(str.maketrans('', '', string.punctuation))\n",
-    "\n",
-    "def remove_stopwords(msg):\n",
-    "    '''\n",
-    "    aim: remove all stopwords in the tweets\n",
-    "    '''\n",
-    "    word_tokens = word_tokenize(msg)\n",
-    "    filtered_tweet = [word for word in word_tokens if word not in stop_words]\n",
-    "    return ' '.join(filtered_tweet)\n",
-    "\n",
-    "def remove_urls(msg):\n",
-    "    '''\n",
-    "    aim: remove all the urls contained inside the tweets\n",
-    "    '''\n",
-    "    return re.sub(r'http\\S+|www\\S+|https\\S+', '', msg, flags=re.MULTILINE)\n",
-    "\n",
-    "def remove_numbers(msg): \n",
-    "    return re.sub(r'\\d+', '', msg) \n",
-    "\n",
-    "def clean_transcript(msg): \n",
-    "    if not isinstance(msg, str): \n",
-    "        return \"\"\n",
-    "    msg = remove_numbers(msg) \n",
-    "    msg = convert_to_lowercase(msg)\n",
-    "    msg = remove_urls(msg)\n",
-    "    msg = remove_punctuation(msg)\n",
-    "    msg = remove_stopwords(msg)\n",
-    "    return msg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>year</th>\n",
-       "      <th>quarter</th>\n",
-       "      <th>transcript_esg</th>\n",
-       "      <th>esg_score</th>\n",
-       "      <th>esg_risk_level</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>1</td>\n",
-       "      <td>thank emily welcome everyone agilents conferen...</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>3</td>\n",
-       "      <td>thank hannah welcome everyone agilents confere...</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>1</td>\n",
-       "      <td>good day welcome apple q fy earnings conferenc...</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>good day welcome apple q fy earnings conferenc...</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>3</td>\n",
-       "      <td>good day welcome apple q fy earnings conferenc...</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  symbol  year  quarter                                     transcript_esg  \\\n",
-       "0      A  2022        1  thank emily welcome everyone agilents conferen...   \n",
-       "1      A  2022        3  thank hannah welcome everyone agilents confere...   \n",
-       "2   AAPL  2022        1  good day welcome apple q fy earnings conferenc...   \n",
-       "3   AAPL  2022        2  good day welcome apple q fy earnings conferenc...   \n",
-       "4   AAPL  2022        3  good day welcome apple q fy earnings conferenc...   \n",
-       "\n",
-       "   esg_score esg_risk_level  \n",
-       "0       15.0            Low  \n",
-       "1       15.0            Low  \n",
-       "2       17.0            Low  \n",
-       "3       17.0            Low  \n",
-       "4       17.0            Low  "
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train['transcript_esg'] = train['transcript_esg'].apply(clean_transcript)\n",
-    "test['transcript_esg'] = test['transcript_esg'].apply(clean_transcript)\n",
-    "train.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "538"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train['transcript_esg'][1].split(\" \"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>year</th>\n",
-       "      <th>quarter</th>\n",
-       "      <th>transcript_esg</th>\n",
-       "      <th>esg_score</th>\n",
-       "      <th>esg_risk_level</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>1</td>\n",
-       "      <td>thank emily welcome everyone agilents conferen...</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>3</td>\n",
-       "      <td>thank hannah welcome everyone agilents confere...</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>1</td>\n",
-       "      <td>good day welcome apple q fy earnings conferenc...</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>good day welcome apple q fy earnings conferenc...</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>3</td>\n",
-       "      <td>good day welcome apple q fy earnings conferenc...</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>603</th>\n",
-       "      <td>WYNN</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>4</td>\n",
-       "      <td>three year global pandemic later wynn la vega ...</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>604</th>\n",
-       "      <td>YUM</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>1</td>\n",
-       "      <td>welcome q yum brand earnings conference call n...</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>Medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>605</th>\n",
-       "      <td>YUM</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>get started would like remind conference call ...</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>Medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>606</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>1</td>\n",
-       "      <td>thank operator good morning everyone welcome z...</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>607</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>thank good morning everyone welcome zoetis sec...</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>608 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    symbol  year  quarter                                     transcript_esg  \\\n",
-       "0        A  2022        1  thank emily welcome everyone agilents conferen...   \n",
-       "1        A  2022        3  thank hannah welcome everyone agilents confere...   \n",
-       "2     AAPL  2022        1  good day welcome apple q fy earnings conferenc...   \n",
-       "3     AAPL  2022        2  good day welcome apple q fy earnings conferenc...   \n",
-       "4     AAPL  2022        3  good day welcome apple q fy earnings conferenc...   \n",
-       "..     ...   ...      ...                                                ...   \n",
-       "603   WYNN  2022        4  three year global pandemic later wynn la vega ...   \n",
-       "604    YUM  2022        1  welcome q yum brand earnings conference call n...   \n",
-       "605    YUM  2022        2  get started would like remind conference call ...   \n",
-       "606    ZTS  2022        1  thank operator good morning everyone welcome z...   \n",
-       "607    ZTS  2022        2  thank good morning everyone welcome zoetis sec...   \n",
-       "\n",
-       "     esg_score esg_risk_level  \n",
-       "0         15.0            Low  \n",
-       "1         15.0            Low  \n",
-       "2         17.0            Low  \n",
-       "3         17.0            Low  \n",
-       "4         17.0            Low  \n",
-       "..         ...            ...  \n",
-       "603       26.0            NaN  \n",
-       "604       21.0         Medium  \n",
-       "605       21.0         Medium  \n",
-       "606       18.0            Low  \n",
-       "607       18.0            Low  \n",
-       "\n",
-       "[608 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def lemmatization(tweet):\n",
-    "    '''\n",
-    "    aim: perform lemmatization on the text\n",
-    "    '''\n",
-    "    words = nltk.word_tokenize(tweet)\n",
-    "    lemmatized_words = [lemmatizer.lemmatize(word) for word in words]\n",
-    "    return ' '.join(lemmatized_words)\n",
-    "\n",
-    "lemmatizer = WordNetLemmatizer() \n",
-    "\n",
-    "# Applying stemming and lemmatization to compare the output\n",
-    "train['transcript_esg'] = train['transcript_esg'].apply(lemmatization)\n",
-    "train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = train.dropna(subset=['transcript_esg', 'esg_score'])\n",
-    "test = test.dropna(subset=['transcript_esg', 'esg_score'])"
    ]
   },
   {
@@ -1016,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
