update on esg_score updated, the result is still bad

--- a/notebooks/prediction/ESGBert_risk_level_prediction.ipynb
+++ b/notebooks/prediction/ESGBert_risk_level_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "[547 rows x 6 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,6 +201,29 @@
     "test = pd.read_csv('../../data/processed/test_esg_shortened.csv')\n",
     "\n",
     "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique ESG risk levels: 5\n",
+      "Unique classes: ['Low' 'Medium' 'Severe' 'High' 'Negligible']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the number of unique classes in the 'esg_risk_level' column\n",
+    "unique_classes = train['esg_risk_level'].unique()\n",
+    "num_classes = len(unique_classes)\n",
+    "\n",
+    "print(f\"Number of unique ESG risk levels: {num_classes}\")\n",
+    "print(f\"Unique classes: {unique_classes}\")"
    ]
   },
   {
