Added finetuning for predicting esg score Revised the path saving results csv to "data/results/..."" Corrected mistake in level-train.ipynb

--- a/notebooks/llama/model-finetuning-llama2-level-train.ipynb
+++ b/notebooks/llama/model-finetuning-llama2-level-train.ipynb
@@ -350,7 +350,7 @@
     "    return prompt\n",
     "\n",
     "df_train[\"text\"] = df_train.apply(\n",
-    "    lambda row: combine_question_answer(row.transcript_esg, row.esg_score, row.esg_risk_level), axis=1\n",
+    "    lambda row: combine_question_answer(row.transcript_esg, row.esg_risk_level), axis=1\n",
     ")\n",
     "df_train[[\"transcript_esg\", \"esg_risk_level\", \"text\"]].head()"
    ]
