adjusting deployment GUI

--- a/notebooks/data/shorten_esg.ipynb
+++ b/notebooks/data/shorten_esg.ipynb
@@ -613,6 +613,83 @@
     "train.to_csv('../../data/processed/train_esg_shortened.csv', index=False)\n",
     "test.to_csv('../../data/processed/test_esg_shortened.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The longest 'transcript_esg' contains 4502 words.\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = pd.read_csv('../../data/processed/train.csv')\n",
+    "\n",
+    "# Handling NaN values by replacing them with an empty string\n",
+    "train['transcript_esg'] = train['transcript_esg'].fillna('')\n",
+    "\n",
+    "# Calculating the number of words in the longest 'transcript_esg'\n",
+    "max_words = train['transcript_esg'].str.split().apply(len).max()\n",
+    "\n",
+    "print(f\"The longest 'transcript_esg' contains {max_words} words.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The longest 'transcript_esg' contains 2429 words.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "train = pd.read_csv('../../data/processed/train_esg_shortened.csv')\n",
+    "\n",
+    "# Handling NaN values by replacing them with an empty string\n",
+    "train['transcript_esg'] = train['transcript_esg'].fillna('')\n",
+    "\n",
+    "# Calculating the number of words in the longest 'transcript_esg'\n",
+    "max_words = train['transcript_esg'].str.split().apply(len).max()\n",
+    "\n",
+    "print(f\"The longest 'transcript_esg' contains {max_words} words.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The longest 'transcript' contains 9929 words.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "train = pd.read_csv('../../data/processed/transcripts.csv')\n",
+    "\n",
+    "# Handling NaN values by replacing them with an empty string\n",
+    "train['transcript'] = train['transcript'].fillna('')\n",
+    "\n",
+    "# Calculating the number of words in the longest 'transcript_esg'\n",
+    "max_words = train['transcript'].str.split().apply(len).max()\n",
+    "\n",
+    "print(f\"The longest 'transcript' contains {max_words} words.\")"
+   ]
   }
  ],
  "metadata": {
