--- a/notebooks/llama/model-finetuning-llama2-level-train.ipynb
+++ b/notebooks/llama/model-finetuning-llama2-level-train.ipynb
@@ -965,6 +965,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train_cut[\"prompt\"] = df_train_cut[\"transcript_esg\"].apply(get_question_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -1068,6 +1077,38 @@
     "# demo\n",
     "generated_text = pipe(df_test_cut.prompt[0])[0][\"generated_text\"]\n",
     "get_generated_risk_level(generated_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 52/52 [04:54<00:00,  5.66s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for data/processed/train_results_240425_1745.csv: 0.4029126213592233\n",
+      "Results saved to data/processed/train_results_240425_1745.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_accuracy = evaluate_and_save_results(pipe, df_train_cut.copy(), f\"data/processed/train_results_{timestamp}.csv\")"
    ]
   },
   {
