--- a/notebooks/data/04_shortening.ipynb
+++ b/notebooks/data/04_shortening.ipynb
@@ -610,8 +610,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv('../../data/processed/train_esg_shortened.csv', index=False)\n",
-    "test.to_csv('../../data/processed/test_esg_shortened.csv', index=False)"
+    "# train.to_csv('../../data/processed/train_esg_shortened.csv', index=False)\n",
+    "# test.to_csv('../../data/processed/test_esg_shortened.csv', index=False)"
    ]
   }
  ],
