--- a/notebooks/esg_risk_level_prediction/finetuned_llama2_for_risk_level_prediction.ipynb
+++ b/notebooks/esg_risk_level_prediction/finetuned_llama2_for_risk_level_prediction.ipynb
@@ -32,6 +32,7 @@
     "from tqdm import tqdm\n",
     "from transformers import (\n",
     "    AutoModelForCausalLM,\n",
+    "    AutoTokenizer,\n",
     "    BitsAndBytesConfig,\n",
     "    TrainingArguments,\n",
     "    pipeline,\n",
@@ -39,7 +40,7 @@
     "from trl import SFTTrainer\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "os.chdir(\"../../\") # current location is /notebooks/llama"
+    "os.chdir(\"../../\")"
    ]
   },
   {
@@ -66,26 +67,6 @@
     "train_path = \"data/processed/train_esg_shortened.csv\"\n",
     "df_train = pd.read_csv(train_path)\n",
     "print(df_train.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/wk3user3/Documents/fina-nlp-project'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pwd"
    ]
   },
   {
