--- a/notebooks/esg_risk_level_prediction/finetuned_llama2_for_risk_level_prediction.ipynb
+++ b/notebooks/esg_risk_level_prediction/finetuned_llama2_for_risk_level_prediction.ipynb
@@ -9,13 +9,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Reference: https://www.datacamp.com/tutorial/fine-tuning-llama-2"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -1023,7 +1016,7 @@
     }
    ],
    "source": [
-    "train_accuracy = evaluate_and_save_results(pipe, df_train_cut.copy(), f\"data/processed/train_results_{timestamp}.csv\")"
+    "train_accuracy = evaluate_and_save_results(pipe, df_train_cut.copy(), f\"results/llama2_finetuned/llama2_for_risk_level_prediction_train.csv\")"
    ]
   },
   {
@@ -1056,7 +1049,7 @@
     }
    ],
    "source": [
-    "test_accuracy = evaluate_and_save_results(pipe, df_test_cut.copy(), f\"data/processed/test_results_{timestamp}.csv\")"
+    "test_accuracy = evaluate_and_save_results(pipe, df_test_cut.copy(), f\"results/llama2_finetuned/llama2_for_risk_level_prediction_test.csv\")"
    ]
   },
   {
